...
            "state": "translated",
            "value": "यात्रा फिर शुरू करें"
          }
        }
      }
    },
    "サイコロを振る": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "サイコロを振る"
...
            "state": "translated",
            "value": "पासा फेंकें"
          }
        }
      }
    },
    "向かう": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "向かう"
...
            "state": "translated",
            "value": "%@ तक चलें। यहाँ मिशन नहीं निकलेगा"
          }
        }
      }
    },
    "サイコロを止める": {
      "extractionState": "manual",
      "localizations": {
        "ja": {
          "stringUnit": {
            "state": "translated",
            "value": "サイコロを止める"
...
